
        * :meth:`!encrypt` was renamed to :meth:`!hash` to match the
          :class:`~passlib.ifc.PasswordHash` API changes listed above.

        * The ``vary_rounds`` option has been deprecated,
          and will be removed in Passlib 2.0.  It provided very little security benefit,
          and was judged not worth the additional code complexity it requires.

    * The :func:`~passlib.utils.generate_secret` function has been deprecated
      in favor of the new :mod:`passlib.pwd` module, and the old function will be removed
      in Passlib 2.0.

    * :class:`passlib.utils.handlers.HasManyBackends` internal API changed:

      Applications implementing a custom handler with multiple backends
      should now provide :samp:`_load_backend_{name}` classmethod for each backend.
      This is simpler, more flexible, and more explicit than the
      previous (1.6 and earlier) API, which required a :samp:`_has_backend_{name}`
      class property and a :samp:`_calc_checksum_{name}` method.

      Support for the older API is deprecated, and will it be removed in Passlib 2.0.

Backwards Incompatibilities
---------------------------
    * :func:`passlib.utils.pbkdf2.pbkdf2` no longer supports custom PRF callables.
      this was an unused feature, and prevented some useful optimizations.

    * The :ref:`min_verify_time <context-min-verify-time-option>` keyword
      that was deprecated in release 1.6, is now completely ignored.
      It was never very useful, and now complicates the internal code needlessly.
      It will be removed entirely in release 1.8.

    * New hashes generated by :class:`~passlib.apache.HtpasswdFile` now use the strongest
      algorithm available on the host, rather than one that is guaranteed to be portable.
      Applications can explicitly set ``default_scheme="portable"`` to retain the old behavior.

    * The little-used method :meth:`~passlib.ifc.PasswordHash.genconfig` method